fix: add z-index value to draggable bar

--- a/packages/app/src/ui/css/index.scss
+++ b/packages/app/src/ui/css/index.scss
@@ -44,6 +44,7 @@ body {
   position: fixed;
   top: 0;
   background-color: var(--color-background-default);
+  z-index: 1;
 }
 
 @import '../pages/mmd-pages.scss';
